Adding SC.cpp - Hope it works

--- a/glue-codes/fast-cpp/CMakeLists.txt
+++ b/glue-codes/fast-cpp/CMakeLists.txt
@@ -34,11 +34,14 @@ include_directories(${CMAKE_BINARY_DIR}/modules-local/openfoam/)
 include_directories(${CMAKE_BINARY_DIR}/modules-local/supercontroller/)
 include_directories(${MPI_INCLUDE_PATH})
 
+add_library(sccpplib
+  src/SC.cpp)
 add_library(openfastcpplib
   src/OpenFAST.cpp)
 set_property(TARGET openfastcpplib PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(openfastcpplib
   openfastlib
+  sccpplib
   ${HDF5_C_LIBRARIES}
   ${HDF5_HL_LIBRARIES}
   ${ZLIB_LIBRARIES}
